// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help component should be displayed as a successful message 1`] = `
<DocumentFragment>
  <p
    class="help is-success"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;

exports[`Help component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <p
    class="help other-class this-is-a-test"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;

exports[`Help component should render 1`] = `
<DocumentFragment>
  <p
    class="help"
  />
</DocumentFragment>
`;

exports[`Help component should use inline styles 1`] = `
<DocumentFragment>
  <p
    class="help"
    style="height: 250px;"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;
